# sig_by_key_api

./: CMakeLists.txt  README.md  plugin.json  relic_api.cpp  sig_by_key_api.cpp
include/steem/plugins/sig_by_key_api/: HibeGS.hpp  forwardsec.hpp  relic_api.hpp  sig_by_key_api.hpp  sig_by_key_api_plugin.hpp
